--- a/profile-site-code/i1.md
+++ b/profile-site-code/i1.md
@@ -6,3 +6,6 @@ database vs datawarehouse
 order of sql execution
 order of complexity in python solution
 transformations
+partition
+optimisation techniques
+explaim plan 
