--- a/profile-site-code/i1.md
+++ b/profile-site-code/i1.md
@@ -3,6 +3,7 @@ olap vs oltp
 broapdcast join
 outer inner left join
 database vs datawarehouse
+columnar storage and row why columnar is faster
 order of sql execution
 order of complexity in python solution
 transformations
